[tool.poetry]
name = "fruits"
version = "0.9.3"
description = "Feature Extraction Using Iterated Sums"
authors = ["alienkrieg <alienkrieg@gmail.com>"]

[tool.poetry.dependencies]
python = ">= 3.9, < 3.10"
numpy = ">= 1.19.2"
numba = ">= 0.52.0"
pandas = {version = "^1.4.1", optional = true}
scipy = {version = "^1.8.0", optional = true}
networkx = {version = "^2.6.3", optional = true}
scikit-learn = {version = "^1.0.2", optional = true}
matplotlib = {version = "^3.5.1", optional = true}
seaborn = {version = "^0.11.2", optional = true}
comet-ml = {version = "^3.26.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = ">= 6.2.4"
pylint = "^2.12.2"
mypy = "^0.931"
pycodestyle = "^2.8.0"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
experiment-dependencies = [
    "pandas", "scipy", "networkx", "scikit-learn", "matplotlib", "seaborn", "comet-ml"
]
