[tool.poetry]
name = "fruits"
version = "0.11.2"
description = "Feature Extraction Using Iterated Sums"
authors = ["alienkrieg <alienkrieg@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alienkrieg/fruits/"

[tool.poetry.dependencies]
python = ">= 3.9"
numpy = ">= 1.19.2"
numba = ">= 0.52.0"
corbeille = {path = "experiments/corbeille/", optional = true, develop = true}

[tool.poetry.dev-dependencies]
pytest = ">= 6.2.4"
pylint = "^2.12.2"
mypy = "^0.931"
pycodestyle = "^2.8.0"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
corbeille = ["corbeille"]
